--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Official Grievance Portal</title>
+    <title>Audrey Grievance Portal</title>
     <meta name="description" content="Submit your official grievances and complaints through our secure portal" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Connor Reitz" />
 
-    <meta property="og:title" content="Official Grievance Portal" />
-    <meta property="og:description" content="Submit your official grievances and complaints through our secure portal" />
+    <meta property="og:title" content="Audge" />
+    <meta property="og:description" content="Grievance portal for Aud" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
